--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,8 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+*/bin/*
+*/lib/*
+/build/*
+/3rdparty/line_descriptor/build/*
+svo/datasets/*
+*~*
+*CMakeLists.txt.user
+*.bag*
